[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["Paul Lim"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fancy-regex = "0.11.0"
itertools = "0.11.0"
md5 = "0.7.0"
petgraph = "0.6.4"
pico-args = "0.5.0"
rayon = "1.8.0"
regex = "1.10.1"
serde_json = "1.0.107"
